# src/common/swagger/swagger.yaml
@@ -1,7 +1,157 @@
 swagger: "2.0"
 info:
-  description: "Interactive Mentor API documentation"
+  description: "Interactive AuthNexus API documentation"
   version: "1.0.0"
-  title: "Mentor API Doc"
-host: "localhost:9200"
+  title: "AuthNexus Doc"
+host: "localhost:3000"
 basePath: "/"
+tags:
+  - name: "Users"
+    description: "Users and Auths APIs"
+schemes:
+  - "http"
+  - "https"
+paths:
+  /users:
+    post:
+      tags:
+        - "Users"
+      summary: "Register new user"
+      description: ""
+      operationId: "registerUsers"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "User object for registration"
+          required: true
+          schema:
+            $ref: "#/definitions/Users"
+      responses:
+        "400":
+          description: "Invalid input"
+        "201":
+          description: "User registration completed successfully"
+      security:
+        - petstore_auth:
+            - "write:pets"
+            - "read:pets"
+  /users/email-verifications:
+    post:
+      tags:
+        - "Users"
+      summary: "Resend the email-verifications link"
+      description: ""
+      operationId: "resendEmailVerifications"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Resend email verifications information"
+          required: true
+          schema:
+            $ref: "#/definitions/ResendVerifyEmail"
+      responses:
+        "201":
+          description: "A verification email has been resent successfully."
+          schema:
+            type: "string"
+          headers:
+            X-Rate-Limit:
+              type: "integer"
+              format: "int32"
+              description: "calls per hour allowed by the user"
+            X-Expires-After:
+              type: "string"
+              format: "date-time"
+              description: "date in UTC when token expires"
+        "400":
+          description: "Invalid params supplied"
+securityDefinitions:
+  petstore_auth:
+    type: "oauth2"
+    authorizationUrl: "http://petstore.swagger.io/oauth/dialog"
+    flow: "implicit"
+    scopes:
+      write:pets: "modify pets in your account"
+      read:pets: "read your pets"
+  api_key:
+    type: "apiKey"
+    name: "api_key"
+    in: "header"
+definitions:
+  Users:
+    type: "object"
+    properties:
+      email:
+        type: "string"
+      password:
+        type: "string"
+      name:
+        type: "string"
+      profileURL:
+        type: "string"
+      activationLink:
+        type: "string"
+    xml:
+      name: "Users"
+  LoginUser:
+    type: "object"
+    properties:
+      email:
+        type: "string"
+      password:
+        type: "string"
+    xml:
+      name: "Users"
+  ResendVerifyEmail:
+    type: "object"
+    properties:
+      email:
+        type: "string"
+      activationLink:
+        type: "string"
+    xml:
+      name: "Users"
+  PasswordResets:
+    type: "object"
+    properties:
+      email:
+        type: "string"
+      link:
+        type: "string"
+        description: "password reset url"
+    xml:
+      name: "PasswordResets"
+  TokenResponse:
+    type: "object"
+    properties:
+      token:
+        type: "string"
+      user:
+        type: "object"
+        properties:
+          email:
+            type: "string"
+          name:
+            type: "string"
+          profileURL:
+            type: "string"
+  UserResponseObj:
+    type: "object"
+    properties:
+      email:
+        type: "string"
+      name:
+        type: "string"
+      profileURL:
+        type: "string"
+  password:
+    type: "object"
+    properties:
+      password:
+        type: "string"
